src/style.css
/* 1. Use a more-intuitive box-sizing model */
*,
*::before,
*::after {
	box-sizing: border-box;
}

/* 2. Remove default margin */
* {
	margin: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
	html {
		interpolate-size: allow-keywords;
	}
}

body {
	/* 4. Add accessible line-height */
	line-height: 1.5;
	/* 5. Improve text rendering */
	-webkit-font-smoothing: antialiased;
}

/* 6. Improve media defaults */
img,
picture,
video,
canvas,
svg {
	display: block;
	max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input,
button,
textarea,
select {
	font: inherit;
}

/* 8. Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
	overflow-wrap: break-word;
}

/* 9. Improve line wrapping */
p {
	text-wrap: pretty;
}
h1,
h2,
h3,
h4,
h5,
h6 {
	text-wrap: balance;
}

/*
    10. Create a root stacking context
  */
#root,
#__next {
	isolation: isolate;
}

/* CSS RESET ENDS */

body {
	height: 100vh;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.main-container {
	display: flex;
	flex-direction: column;
	justify-content: center;
	padding: 10px;
	border: 2px solid black;
	border-radius: 10px;
	width: 40%;
}

img {
	height: 25px;
}

/* HEADER */

.header {
	border-bottom: 2px solid black;
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	padding: 10px;
}

.header .headerTemp {
	flex: 1;
	font-size: 2rem;
}

.leftHeader,
.rightHeader {
	display: flex;
	flex-direction: column;
}

.rightHeader {
	align-items: end;
}

/* HOURS CONTAINER */

.hour-container {
	display: flex;
}

.hour-container .hour {
	flex: 1;
	display: flex;
	flex-direction: column;
	align-items: center;
	padding: 20px 0px;
	border-bottom: 2px solid black;
	gap: 5px;
}

/* DAY CONTAINER */

.day-container {
	padding: 10px;
}

.day {
	display: flex;
	gap: 15px;
}

.day .dayImg {
	justify-self: flex-start;
	flex: 0.4;
}

.day .dayDesc {
	flex: 3;
}

